--- a/log4perl.conf
+++ b/log4perl.conf
@@ -1,4 +1,4 @@
-log4perl.rootLogger                               = TRACE, Screen
+log4perl.rootLogger                               = DEBUG, Screen
 log4perl.appender.Screen                          = Log::Log4perl::Appender::Screen
 log4perl.appender.Screen.stderr                   = 1
 log4perl.appender.Screen.layout                   = Log::Log4perl::Layout::SimpleLayout
